kubernetes/wordpress-example/wordpress-apache/mysql-deploy-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: wordpress-apache-example
spec:
  type: ClusterIP
  selector:
    app: wordpress-apache-mysql
  ports:
  - name: port-1
    port: 3306
    protocol: TCP
    # targetPort: 3306 # don't have to be defined if its eq to port

---
apiVersion: apps/v1
kind: Deployment
# kind: StatefulSet
metadata:
  name: mysql-deploy
  namespace: wordpress-apache-example
spec:
  selector:
    matchLabels:
      app: wordpress-apache-mysql
  replicas: 1
  template:
    metadata:
      name: wordpress-apache-mysql-template
      labels:
        app: wordpress-apache-mysql
    spec:
      containers:
      - name: mysql
        # image: mysql:8.0.11
        image: mysql:5.7.22
        ports:
        - containerPort: 3306
        args:
          - --character-set-server=utf8mb4
          - --collation-server=utf8mb4_unicode_ci
        livenessProbe:
          tcpSocket:
            port: 3306
        readinessProbe:
          tcpSocket:
            port: 3306
