kubernetes/wordpress-example/wordpress-apache/wordpress-svc-deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-apache
  namespace: wordpress-apache-example
spec:
  selector:
    app: wordpress-apache
  # type: NodePort
  ports:
  -
    name: port-1
    port: 80
    protocol: TCP
    # nodePort: 31110
    targetPort: 80 # port on pods

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-apache
  namespace: wordpress-apache-example
spec:
  selector:
    matchLabels:
      app: wordpress-apache
  replicas: 1
  template:
    metadata:
      name: wordpress-apache-template
      labels:
        app: wordpress-apache
    spec:
      containers:
        - name: wordpress
          image: wordpress:4.9.6-php7.2-apache
          ports:
          - containerPort: 80
            name: foo
